syntax = "proto3";
package sshardpb;

option go_package = "github.com/nathanieltornow/ostracon/seqshard/seqshardpb";


service Shard {
  rpc GetOrder(stream OrderRequest) returns (stream OrderResponse);
  rpc ReportCommittedRecords(stream CommittedRecord) returns (stream CommittedRecord);
}

message OrderRequest {
  int64 NumOfRecords = 1;
  int64 StartLsn = 2;
}

message OrderResponse {
  int64 StartGsn = 1;
  int64 StartLsn = 2;
  int64 NumOfRecords = 3;
}

message CommittedRecord {
  int64 Gsn = 1;
  string Record = 2;
}
